--- a/RoR2VRMod/VRMod.csproj
+++ b/RoR2VRMod/VRMod.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GameFolderPath Condition=" '$(GameFolderPath)' == '' ">D:\SteamLibrary\steamapps\common\Risk of Rain 2</GameFolderPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
     <PackageReference Include="MMHOOK.RoR2" Version="2024.9.18" />
@@ -20,7 +24,7 @@
       <HintPath>..\VREnabler\Plugins\Bhaptics.Tact.dll</HintPath>
     </Reference>
     <Reference Include="Decalicious">
-      <HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\stubs\Decalicious-nstrip.dll</HintPath>
+      <HintPath>$(GameFolderPath)\Risk of Rain 2_Data\Managed\Decalicious.dll</HintPath>
     </Reference>
     <Reference Include="ShockwaveManager">
       <HintPath>..\VREnabler\Plugins\ShockwaveManager.dll</HintPath>
@@ -32,7 +36,7 @@
       <HintPath>..\VREnabler\Dependencies\SteamVR_Actions.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
-      <HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
+      <HintPath>$(GameFolderPath)\Risk of Rain 2_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.XR.CoreUtils">
       <HintPath>..\VREnabler\Dependencies\Unity.XR.CoreUtils.dll</HintPath>
@@ -47,7 +51,7 @@
       <HintPath>..\VREnabler\Dependencies\Unity.XR.OpenVR.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.SpatialTracking">
-      <HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\Risk of Rain 2_Data\Managed\UnityEngine.SpatialTracking.dll</HintPath>
+      <HintPath>$(GameFolderPath)\Risk of Rain 2_Data\Managed\UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
   </ItemGroup>
 
