--- a/VREnabler/VRPatcher.csproj
+++ b/VREnabler/VRPatcher.csproj
@@ -13,72 +13,31 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Binds\actions.json" />
-    <None Remove="Binds\bindings_holographic_controller.json" />
-    <None Remove="Binds\bindings_knuckles.json" />
-    <None Remove="Binds\bindings_logitech_stylus.json" />
-    <None Remove="Binds\bindings_oculus_touch.json" />
-    <None Remove="Binds\bindings_vive_controller.json" />
-    <None Remove="Binds\bindings_vive_cosmos_controller.json" />
-    <None Remove="Binds\binding_holographic_hmd.json" />
-    <None Remove="Binds\binding_index_hmd.json" />
-    <None Remove="Binds\binding_rift.json" />
-    <None Remove="Binds\binding_vive.json" />
-    <None Remove="Binds\binding_vive_cosmos.json" />
-    <None Remove="Binds\binding_vive_pro.json" />
-    <None Remove="Binds\binding_vive_tracker_camera.json" />
-    <None Remove="Dependencies\OculusSubsystems.json" />
-    <None Remove="Dependencies\OculusXRPlugin.dll" />
-    <None Remove="Dependencies\OpenVRSubsystems.json" />
-    <None Remove="Dependencies\openvr_api.dll" />
-    <None Remove="Dependencies\OVRPlugin.dll" />
-    <None Remove="Dependencies\Unity.XR.OpenVR.dll" />
-    <None Remove="Dependencies\XRSDKOpenVR.dll" />
-    <None Remove="Plugins\AudioPluginOculusSpatializer.dll" />
-    <None Remove="Plugins\Bhaptics.Tact.dll" />
-    <None Remove="Plugins\LIV_Bridge.dll" />
-    <None Remove="Plugins\openvr_api.dll" />
-    <None Remove="Plugins\OVRGamepad.dll" />
-    <None Remove="Plugins\OVRPlugin.dll" />
-    <None Remove="Plugins\ShockWaveIMU.dll" />
-    <None Remove="Plugins\ShockwaveManager.dll" />
-    <None Remove="Plugins\SteamVR.dll" />
-    <None Remove="Plugins\SteamVR_Actions.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Include="Binds\actions.json" />
     <EmbeddedResource Include="Binds\bindings_holographic_controller.json" />
     <EmbeddedResource Include="Binds\bindings_knuckles.json" />
     <EmbeddedResource Include="Binds\bindings_oculus_touch.json" />
     <EmbeddedResource Include="Binds\bindings_vive_controller.json" />
     <EmbeddedResource Include="Binds\bindings_vive_cosmos_controller.json" />
-    <EmbeddedResource Include="Dependencies\OculusXRPlugin.dll" />
-    <EmbeddedResource Include="Dependencies\OpenVRSubsystems.json" />
-    <EmbeddedResource Include="Dependencies\OVRPlugin.dll" />
-    <EmbeddedResource Include="Dependencies\Unity.XR.OpenVR.dll" />
-    <EmbeddedResource Include="Dependencies\XRSDKOpenVR.dll" />
-    <EmbeddedResource Include="Plugins\AudioPluginOculusSpatializer.dll" />
     <EmbeddedResource Include="Plugins\Bhaptics.Tact.dll" />
     <EmbeddedResource Include="Plugins\LIV_Bridge.dll" />
-    <EmbeddedResource Include="Plugins\openvr_api.dll" />
-    <EmbeddedResource Include="Plugins\OVRGamepad.dll" />
-    <EmbeddedResource Include="Plugins\OVRPlugin.dll" />
     <EmbeddedResource Include="Plugins\ShockWaveIMU.dll" />
     <EmbeddedResource Include="Plugins\ShockwaveManager.dll" />
-    <EmbeddedResource Include="Plugins\SteamVR.dll" />
-    <EmbeddedResource Include="Plugins\SteamVR_Actions.dll" />
   </ItemGroup>
 
+  <!-- Unity /Managed -->
   <ItemGroup>
-    <Reference Include="AssetsTools.NET">
-      <HintPath>..\..\AssetsTools.NET.dll</HintPath>
-    </Reference>
+    <EmbeddedResource Include="Plugins\Unity.XR.CoreUtils.dll" />
+    <EmbeddedResource Include="Plugins\Unity.XR.Interaction.Toolkit.dll" />
+    <EmbeddedResource Include="Plugins\Unity.XR.Management.dll" />
+    <EmbeddedResource Include="Plugins\Unity.XR.OpenXR.dll" />
+    <EmbeddedResource Include="Plugins\UnityEngine.SpatialTracking.dll" />
   </ItemGroup>
-
+  
+  <!-- Unity _Data/Plugins/x86_ -->
   <ItemGroup>
-    <EmbeddedResource Include="Dependencies\OculusSubsystems.json" />
-    <EmbeddedResource Include="Dependencies\openvr_api.dll" />
+    <EmbeddedResource Include="Plugins\openxr_loader.dll" />
+    <EmbeddedResource Include="Plugins\UnityOpenXR.dll" />
   </ItemGroup>
 
   <ItemGroup>
@@ -97,7 +56,9 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;C:\Users\olipo\AppData\Roaming\r2modmanPlus-local\RiskOfRain2\profiles\Default\BepInEx\patchers\DrBibop-VRMod\$(TargetFileName)&quot;" />
+    <!--<Exec Command="copy &quot;$(TargetPath)&quot; &quot;C:\Users\olipo\AppData\Roaming\r2modmanPlus-local\RiskOfRain2\profiles\Default\BepInEx\patchers\DrBibop-VRMod\$(TargetFileName)&quot;" />-->
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;C:\Users\kokro\AppData\Roaming\Thunderstore Mod Manager\DataFolder\RiskOfRain2\profiles\VR Only\BepInEx\patchers\DrBibop-VRMod\$(TargetFileName)&quot;" />
+    
   </Target>
 
 </Project>
