--- a/VREnabler/VRPatcher.csproj
+++ b/VREnabler/VRPatcher.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AssetsTools.NET" Version="2.0.12" />
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
